--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Srinu resume (1).pdf')"
+            onclick="window.open('./assets/srinivas Resume .pdf')"
           >
             Download CV
           </button>
